# emoji-cloud-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_example.py  run_test.py  setup.py
EmojiCloud/: EmojiCloud.py  canvas.py  config.py  emoji.py  plot.py  util.py  vendors.py
examples/: different_canvas.py  different_vendors.py
src/: update_data_from_github.sh
src/EmojiCloud/: config.py  util.py  vendors.py
tests/: test_emoji.py  test_plot.py
